sketch of paper

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -120,6 +120,8 @@ $$\approx-\log\int\lambda^{\alpha-1}d\lambda$$
 
 This lets us now write
 
+\charles{Somehow I lost a minus sign. Something is off...because the norm can not be negative, and $\alpha>1$}
+
 $$\log\Vert\mathbf{W}\Vert^{2}\approx\log\left[\dfrac{\lambda^{\alpha}}{\alpha}\right]^{\lambda_{max}}_{\lambda_{min}}$$
 
 Since $\lambda_{min}\sim 0$, we have \charles{check this}
