paper theory sketched out more

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -136,6 +136,8 @@ where $K_{a}={\dfrac{1-\alpha}{2-\alpha}}$ is a normalization term that does not
 
 \paragraph{Power Law - Norm Relation}
 
+\michael{Why is the sign wrong ?!}
+
 Let us first write
 
 $$2\log\Vert\mathbf{W}\Vert\approx(-\alpha)\log\lambda_{max}+2\log\lambda_{max}+\log\;K_{\alpha}$$
