--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -95,11 +95,18 @@ $$\log\Vert\mathbf{W}\Vert_{F}^{2}=2\log\Vert\mathbf{W}\Vert$$
 
 which makes the following analysis much simpler.
 
-the squared Frobenius norm is just the Trace of $\mathbf{W}$:
+the squared Frobenius norm is just the Trace of $\mathbf{W}^{T}\mathbf{W}$:
 
-$$\Vert\mathbf{W}\Vert_{F}^{2}=Tr[\mathbf{W}]$$
+$$\Vert\mathbf{W}\Vert_{F}^{2}=Tr[\mathbf{W}^{T}\mathbf{W}]$$
+
+or $N$ times the Trace of $\mathbf{X}$
+
+$$=Tr[N\mathbf{X}]=N\sum_{i=1}^{M}\lambda_{i}$$
+
 
 For very large matrices, with many eigenvalues, we can approximate the Trace as an integral over the empirical density
+
+\charles{We may be missing the N term here:
 
 $$\Vert\mathbf{W}_{l,i}\Vert_{F}^{2}\sim\int_{x_{min}}^{x_{max}}\lambda\rho_{l,i}(\lambda)d\lambda$$
 
@@ -113,6 +120,40 @@ $$\rho(\lambda):=(\alpha-1)\lambda^{-\alpha}$$
 so that
 
 $$\int_{0}^{\infty}\rho(\lambda)d\lambda=1$$
+}
+ 
+\michael{something like this ?  Trying to figure out how to get rid of the - sign on alpha
+
+$$\int_{0}^{\infty}\rho(\lambda)d\lambda=N$$
+
+but we really want
+
+$$C\int_{0}^{\lambda_{max}}\rho(\lambda)d\lambda=N$$
+
+$$\dfrac{C}{(1-\alpha)}\lambda_{max}^{1-\alpha}=N$$
+
+
+What is C ?  Let $C=(\alpha-1)K$ and solve for K
+
+
+$$K\lambda_{max}^{1-\alpha}=N$$
+
+$$K=N\lambda_{max}^{\alpha-1}$$
+
+This means we need to evaluate
+
+$$(\alpha-1)N\lambda_{max}^{\alpha-1}\int_{0}^{\lambda_{\max}}\lambda^{1-\alpha}d\lambda$$
+
+which gives a crazier expression for the Norm that is missing the alpha dependence ?
+
+$$Norm^{2}=\dfrac{(\alpha-1)}{2-\alpha}N\lambda_{max}^{\alpha-1}\lambda_{max}^{2-\alpha}$$
+
+$$Norm^{2}=\dfrac{(\alpha-1)}{2-\alpha}N\lambda_{max}$$
+
+
+
+}
+
 
 Notice we ignore that we actually want to normalize only the bounded support  $\int_{\lambda_{min}}^{\lambda^{max}}\circ d\lambda$.
 Of course, eventually we need to consider this since we have a finite $\lambda_{max}\ll\infty$.  
